# RenderStudyPetProject

./: .gitignore  Application.cpp  Application.hpp  Assets.cpp  Assets.h  CMakeLists.txt  GEngine.sln  GL_ERROR.cpp  GL_ERROR.h  README.md  Source.cpp  Timer.cpp  Window.cpp  Window.h  glad.c  imgui.ini  jdEngine.sln  main.cpp  main.h
ECS/: ComponentArray.h  ComponentManager.h  EntityManager.cpp  EntityManager.h  EventManager.cpp  EventManager.h  System.h  SystemManager.cpp  SystemManager.h  configurations.h  jdEngine.cpp  jdEngine.h
Models/: Model.cpp  Model.h  Terrain.cpp  Terrain.h
events/: Event.h  EventComponent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
gui/: Interface.cpp  Interface.h  JdGui.cpp
interface/: input.cpp  input.h  interface.cpp  interface.h
jdEngineCore/: CMakeLists.txt
jdEngineCore/includes/: Display.h  GL_ERROR.h
jdEngineCore/includes/ECS/: ComponentArray.h  ComponentManager.h  EventManager.h  Types.h  Types.h.in  configurations.h  jdEngine.h
jdEngineCore/includes/ECS/components/: AssimpModel.h  Camera.h  Gravity.h  Instanced.h  Light.h  Mesh2D.h  Mesh3D.h  Renderable.h  RigidBody.h  SkyboxComponent.h  SpotLight.h  Thrust.h  Transform.h  VolumeComponent.h
jdEngineCore/includes/ECS/systems/: AssimpModelSystem.h  CameraControlSystem.h  FogSystem.h  LightSystem.h  MaterialSystem.h  ModelSystem2D.h  RenderSystem.h  SkyboxSystem.h
jdEngineCore/includes/Events/: Body2DCreationEvent.h  EntityCreationEvent.h  EventComponent.h  WindowEvent.h
jdEngineCore/includes/Gui/: Interface.h  JdGui.h  imgui_notify.h
jdEngineCore/includes/Math/: Bounder.h  IVolumeConstructor.h  Quaternion.h  VolumeAABB.h  VolumeSphere.h
jdEngineCore/includes/Models/: Model.h  ModelManager.h  Terrain.h
jdEngineCore/includes/PhysX/: PhysX.h
jdEngineCore/includes/Render/: FrameBuffer.h  Grid.h  Primitives.h  RenderBuffer.h  Sampler.h  ShaderComponent.h  ShaderManager.h  Texture.h  TextureManager.h  VertexBuffer.h
jdEngineCore/includes/Scenes/: AppScene.h  Demo1.h  Demo2.h  Scene.h  collisionsDemo.h
jdEngineCore/includes/Utils/: File.h  ThreadPool.h  ThreadQueue.h  Timer.h  jd_string.h  logger.h  topology.h
jdEngineCore/src/: Display.cpp
jdEngineCore/src/ECS/: EntityManager.cpp  EventManager.cpp  SystemManager.cpp  jdEngine.cpp
jdEngineCore/src/ECS/systems/: AssimpModelSystem.cpp  CameraControlSystem.cpp  FogSystem.cpp  LightSystem.cpp  MaterialSystem.cpp  ModelSystem2D.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  SkyboxSystem.cpp
jdEngineCore/src/Gui/: Interface.cpp  JdGui.cpp
jdEngineCore/src/Math/: Bounder.cpp  VolumeAABB.cpp  VolumeSphere.cpp
jdEngineCore/src/Models/: Model.cpp  ModelManager.cpp  Terrain.cpp
jdEngineCore/src/Render/: FrameBuffer.cpp  Grid.cpp  Primitives.cpp  RenderBuffer.cpp  Sampler.cpp  SamplerManager.cpp  Shader.cpp  ShaderComponent.cpp  ShaderManager.cpp  Texture.cpp  TextureManager.cpp  UniformBuffer.cpp  VertexBuffer.cpp
jdEngineCore/src/Scenes/: AppScene.cpp  Demo1.cpp  Demo2.cpp  SceneManager.cpp
jdEngineCore/src/Utils/: File.cpp  ThreadPool.cpp  Timer.cpp  logger.cpp  stb_image.cpp  topology.cpp
light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
objects/: Camera.cpp  Camera.h  Material.cpp  Material.h
physiX/: Quaternion.h
primitives/: Cube.cpp  Cube.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
render/: Core.h  Cubemap.cpp  Cubemap.h  Gbuffer.cpp  Gbuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  SamplerManager.cpp  SamplerManager.h  Shader.cpp  Shader.h  ShaderComponent.cpp  ShaderComponent.h  ShaderManager.cpp  ShaderManager.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp
res/: casters_light.frag
(+121 files in other folders)
